--- a/content/pdf/MCMC_Jax.ipynb
+++ b/content/pdf/MCMC_Jax.ipynb
@@ -1,20 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -28,8 +12,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "JAX version: 0.8.0\n",
             "Backend: gpu\n",
@@ -47,9 +31,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "!nvidia-smi"
-      ],
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -57,11 +39,10 @@
         "id": "YBYgy4A1sEIo",
         "outputId": "c55b0e88-9001-43c6-db13-e295bc4535f5"
       },
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Wed Oct 29 15:59:42 2025       \n",
             "+-----------------------------------------------------------------------------------------+\n",
@@ -84,10 +65,30 @@
             "+-----------------------------------------------------------------------------------------+\n"
           ]
         }
+      ],
+      "source": [
+        "!nvidia-smi"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ACe8H-X9sL1R",
+        "outputId": "0368cb13-c312-43d1-92a1-5270db7ddc3d"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Dataset shape: (569, 30) (569,)\n"
+          ]
+        }
+      ],
       "source": [
         "import jax.numpy as jnp\n",
         "import numpyro\n",
@@ -105,27 +106,15 @@
         "y = jnp.asarray(y)\n",
         "n_features = X.shape[1]\n",
         "print(\"Dataset shape:\", X.shape, y.shape)"
-      ],
-      "metadata": {
-        "id": "ACe8H-X9sL1R",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "0368cb13-c312-43d1-92a1-5270db7ddc3d"
-      },
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Dataset shape: (569, 30) (569,)\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {
+        "id": "ESClGIhSw1Q2"
+      },
+      "outputs": [],
       "source": [
         "def joint_log_prob(x, y, tau, lamb, beta):\n",
         "    lp = tfd.Gamma(0.5, 0.5).log_prob(tau)\n",
@@ -134,23 +123,11 @@
         "    logits = x @ (tau * lamb * beta)\n",
         "    lp += tfd.Bernoulli(logits=logits).log_prob(y).sum()\n",
         "    return lp"
-      ],
-      "metadata": {
-        "id": "ESClGIhSw1Q2"
-      },
-      "execution_count": 10,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from jax import random\n",
-        "\n",
-        "key = random.key(0)           # initialize PRNG key\n",
-        "beta = random.uniform(key, (30,), minval=0.0, maxval=1.0)\n",
-        "\n",
-        "print(beta)"
-      ],
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -158,11 +135,10 @@
         "id": "9szyGxAM09wR",
         "outputId": "114ba10d-8308-4e79-b2f0-68f423c9b2e4"
       },
-      "execution_count": 15,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "[0.947667   0.9785799  0.33229148 0.46866846 0.5698887  0.16550303\n",
             " 0.3101946  0.68948054 0.74676657 0.17101455 0.9853538  0.02528262\n",
@@ -171,13 +147,19 @@
             " 0.5522419  0.6113529  0.8931755  0.75499094 0.21164179 0.22934973]\n"
           ]
         }
+      ],
+      "source": [
+        "from jax import random\n",
+        "\n",
+        "key = random.key(0)           # initialize PRNG key\n",
+        "beta = random.uniform(key, (30,), minval=0.0, maxval=1.0)\n",
+        "\n",
+        "print(beta)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "joint_log_prob(X, y, 1.0, 1.0, beta)"
-      ],
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -185,22 +167,29 @@
         "id": "EGlmGLN013xG",
         "outputId": "51b65cc3-4bce-4175-efd0-0b82e8e5f79b"
       },
-      "execution_count": 16,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "Array(-4869.8623, dtype=float32)"
             ]
           },
+          "execution_count": 16,
           "metadata": {},
-          "execution_count": 16
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "joint_log_prob(X, y, 1.0, 1.0, beta)"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 20,
+      "metadata": {
+        "id": "GdsDqXRv26un"
+      },
+      "outputs": [],
       "source": [
         "def unconstrained_joint_log_prob(x, y, z):\n",
         "    ndims = x.shape[-1]\n",
@@ -212,15 +201,28 @@
         "    return joint_log_prob(x, y, tau, lamb, beta) + ldj\n",
         "\n",
         "target_log_prob = lambda z: unconstrained_joint_log_prob(X, y, z)"
-      ],
-      "metadata": {
-        "id": "GdsDqXRv26un"
-      },
-      "execution_count": 20,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 21,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zNRKj1e23cJP",
+        "outputId": "3017d3b4-81c8-4d43-9765-d2d7aa35e020"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Initial log-density: -465.95599365234375\n",
+            "Gradient L2 norm: 803.6372680664062\n"
+          ]
+        }
+      ],
       "source": [
         "target_log_prob_and_grad = jax.value_and_grad(target_log_prob)\n",
         "\n",
@@ -230,34 +232,56 @@
         "logp, grad = target_log_prob_and_grad(z_init)\n",
         "print(\"Initial log-density:\", float(logp))\n",
         "print(\"Gradient L2 norm:\", float(jnp.linalg.norm(grad)))"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "zNRKj1e23cJP",
-        "outputId": "3017d3b4-81c8-4d43-9765-d2d7aa35e020"
-      },
-      "execution_count": 21,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Initial log-density: -465.95599365234375\n",
-            "Gradient L2 norm: 803.6372680664062\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "8khUUUV53rKw"
       },
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 3.2 Hamiltonian Monte Carlo\n",
+        "\n",
+        "Now we are ready to move on to using HMC. Below, we implement a simple version of HMC using JAX. In particular, this implementation does not accept or adapt a mass matrix (Betancourt, 2018; Neal, 2011) (it is implicitly an identity matrix of the appropriate size), nor does it adapt the step size or number of leapfrog steps. We use the variable `z` for the parameters, and `m` for the momentum."
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
-      "outputs": []
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def leapfrog_step(target_log_prob_and_grad, step_size, i, leapfrog_state):\n",
+        "    z, m, tlp, tlp_grad = leapfrog_state\n",
+        "    m += 0.5 * step_size * tlp_grad\n",
+        "    z += step_size * m\n",
+        "    tlp, tlp_grad = target_log_prob_and_grad(z)\n",
+        "    m += 0.5 * step_size * tlp_grad\n",
+        "    return z, m, tlp, tlp_grad"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "T4",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
