--- a/content/posts/jax-103.md
+++ b/content/posts/jax-103.md
@@ -101,18 +101,27 @@ print(batched_loss(scale, preds, targets))
 
 `out_axes` lets you keep channel-first layouts or align with library expectations. A negative index (`-1`) is a friendly reminder that you can restack the results wherever they need to land.
 
+Start by reading the sample code below so the axis juggling is clear before you execute it; we construct two random "images" so you can track how the dimensions move.
+
 ```python
 def normalize(x):
     x_centered = x - jnp.mean(x)
     return x_centered / jnp.std(x)
 
-images = jax.random.normal(jax.random.PRNGKey(0), (32, 28, 28))
+images = jax.random.normal(jax.random.PRNGKey(0), (2, 28, 28))
+print("images shape:", images.shape)
+
+channel_first_norm = vmap(normalize, in_axes=0, out_axes=0)(images)
+print("channel_first_norm shape:", channel_first_norm.shape)
+
 channel_last_norm = vmap(normalize, in_axes=0, out_axes=-1)(images)
 print("channel_last_norm shape:", channel_last_norm.shape)
 ```
 
 ```text
-channel_last_norm shape: (28, 28, 32)
+images shape: (2, 28, 28)
+channel_first_norm shape: (2, 28, 28)
+channel_last_norm shape: (28, 28, 2)
 ```
 
 The computation still runs per image; we only reshaped the stacked result to satisfy a downstream API that expects the batch dimension at the end.
