--- a/content/posts/jax-102.md
+++ b/content/posts/jax-102.md
@@ -199,6 +199,25 @@ final_states shape: (3, 8)
 activations shape : (3, 16, 8)
 ```
 
+## 7. Visual diagnostics after `lax`-driven sampling
+
+The sampling loops in [JAX 202](../jax-202) rely on `lax.scan` to propagate Hamiltonian Monte Carlo states. Once you have an `InferenceData` object, you can visualize chain mixing without leaving the JAX trace:
+
+```python
+import matplotlib.pyplot as plt
+
+az.plot_trace(
+    idata,
+    var_names=["theta"],
+    coords={"theta_dim": slice(0, 4)},
+    compact=True,
+    figsize=(10, 6),
+)
+plt.tight_layout()
+```
+
+![Trace plots generated from the sampler](/img/posts/jax-102/trace.png)
+
 Because all control flow is expressed with `lax`, `jit` sees a single static computation graph. Gradients with respect to `params` or the inputs flow automatically:
 
 ```python
@@ -210,14 +229,14 @@ print("dLoss/dw_hh shape:", grad(loss)(params)[0].shape)
 dLoss/dw_hh shape: (8, 8)
 ```
 
-## 7. Debugging and gotchas
+## 8. Debugging and gotchas
 
 - `lax` primitives require pure functions. Avoid Python side effects such as appending to lists or mutating globals; use carry states instead.
 - Shapes must be consistent across branches and loop iterations. XLA needs static signatures to compile; mismatched shapes trigger shape errors at trace time.
 - Prefer `lax.scan` over manual `fori_loop` when you need the intermediate outputs; it fuses faster and uses less memory than accumulating Python lists and stacking afterward.
 - Combine `jax.debug.print` with `lax.cond` or `lax.scan` when you need to peek at intermediate values without de-optimizing your JIT'ed function.
 
-## 8. Where to go next
+## 9. Where to go next
 
 - Swap `lax.scan` for higher-level libraries like Flax's `nn.scan` if you want parameter sharing across time steps with less boilerplate.
 - Explore `lax.map`, `lax.associative_scan`, and `lax.broadcast` to structure parallel-friendly loops.
