--- a/content/posts/jax-201.md
+++ b/content/posts/jax-201.md
@@ -2,7 +2,7 @@
 title = "JAX 201: Multi-GPU Training with pmap"
 date = "2025-10-30T19:00:00Z"
 type = "post"
-draft = true
+draft = false
 math = false
 tags = ["jax", "multi-gpu", "distributed-training"]
 categories = ["posts"]
