--- a/content/posts/jax-202.md
+++ b/content/posts/jax-202.md
@@ -2,7 +2,7 @@
 title = "JAX 202: Bayesian Sampling with BlackJax"
 date = "2025-10-31T00:00:00Z"
 type = "post"
-draft = true
+draft = false
 math = true
 tags = ["jax", "blackjax", "bayesian-inference"]
 categories = ["posts"]
@@ -59,6 +59,24 @@ train_features = jnp.asarray(x_train_np)
 train_labels = jnp.asarray(y_train_np)
 test_features = jnp.asarray(x_test_np)
 test_labels = jnp.asarray(y_test_np)
+```
+
+Confirm that JAX sees at least one device and that the GPU runtime is active when available.
+
+```python
+jax.device_count()
+```
+
+```text
+1
+```
+
+```python
+jax.default_backend()
+```
+
+```text
+'gpu'
 ```
 
 ## 2. Framing the posterior
@@ -157,7 +175,7 @@ def tune_hmc(rng_key, state, step_size, inverse_mass_matrix, num_rounds=6, batch
         hmc = build_hmc(step_size, inverse_mass_matrix)
         rng_key, round_key = jax.random.split(rng_key)
         positions, infos, state = sample_hmc(hmc, round_key, state, num_samples=batch_size)
-        accept_rate = float(jnp.mean(infos.acceptance_probability))
+        accept_rate = float(jnp.mean(infos.is_accepted))
 
         if accept_rate < 0.75:
             step_size *= 0.8
@@ -219,16 +237,106 @@ Collect kernel metadata (acceptance rates, energy errors) from `infos` and feed 
 import arviz as az
 
 idata = az.from_dict(
-    posterior={"theta": posterior_draws},
+    posterior={"theta": samples},
     sample_stats={
-        "accept_prob": infos.acceptance_probability,
+        "accept_prob": infos.is_accepted,
         "energy": infos.energy,
     },
+    dims={"theta": ["theta_dim"]},
 )
 
-summary = az.summary(idata, var_names=["theta"], kind="stats")
-print(summary[["mean", "sd", "ess_bulk", "r_hat"]])
+summary = az.summary(idata, var_names=["theta"], kind="diagnostics")
+print(summary[["ess_bulk", "r_hat"]])
+
+stats_summary = az.summary(idata, var_names=["theta"], kind="stats")
+print("\nStats Summary:")
+print(stats_summary[["mean", "sd", "hdi_3%", "hdi_97%"]])
 ```
+
+```text
+           ess_bulk  r_hat
+theta[0]      152.0   1.03
+theta[1]      616.0   1.01
+theta[2]      291.0   1.01
+theta[3]       76.0   1.09
+theta[4]      383.0   1.00
+theta[5]      271.0   1.01
+theta[6]      358.0   1.02
+theta[7]      171.0   1.01
+theta[8]      872.0   1.00
+theta[9]      244.0   1.01
+theta[10]     114.0   1.00
+theta[11]     690.0   1.01
+theta[12]     178.0   1.01
+theta[13]      90.0   1.03
+theta[14]     853.0   1.00
+theta[15]     384.0   1.01
+theta[16]     339.0   1.02
+theta[17]     392.0   1.01
+theta[18]     549.0   1.00
+theta[19]     255.0   1.01
+theta[20]      56.0   1.06
+theta[21]     477.0   1.02
+theta[22]     183.0   1.01
+theta[23]     115.0   1.03
+theta[24]     421.0   1.00
+theta[25]     252.0   1.01
+theta[26]     234.0   1.02
+theta[27]     237.0   1.01
+theta[28]     629.0   1.00
+theta[29]     209.0   1.01
+theta[30]     557.0   1.00
+
+Stats Summary:
+            mean     sd  hdi_3%  hdi_97%
+theta[0]  -0.661  0.919  -2.440    0.975
+theta[1]  -0.579  0.590  -1.618    0.583
+theta[2]  -0.567  0.902  -2.316    1.063
+theta[3]  -0.894  0.967  -2.828    0.862
+theta[4]  -0.232  0.625  -1.433    0.914
+theta[5]   0.428  0.761  -1.039    1.760
+theta[6]  -0.860  0.800  -2.378    0.620
+theta[7]  -1.040  0.823  -2.650    0.502
+theta[8]   0.117  0.559  -0.902    1.143
+theta[9]   0.572  0.726  -0.716    1.983
+theta[10] -1.552  0.797  -3.048   -0.061
+theta[11]  0.008  0.520  -0.953    0.992
+theta[12] -0.781  0.834  -2.436    0.714
+theta[13] -1.067  0.973  -2.877    0.825
+theta[14] -0.319  0.520  -1.244    0.713
+theta[15]  0.676  0.717  -0.680    1.971
+theta[16]  0.211  0.607  -0.927    1.337
+theta[17] -0.402  0.697  -1.713    0.869
+theta[18]  0.530  0.587  -0.594    1.603
+theta[19]  0.620  0.714  -0.602    2.000
+theta[20] -1.206  0.934  -2.838    0.585
+theta[21] -1.112  0.649  -2.295    0.197
+theta[22] -0.903  0.893  -2.699    0.622
+theta[23] -0.887  0.897  -2.602    0.806
+theta[24] -0.851  0.639  -2.063    0.320
+theta[25] -0.323  0.838  -1.869    1.232
+theta[26] -0.830  0.771  -2.282    0.536
+theta[27] -0.944  0.807  -2.430    0.509
+theta[28] -0.949  0.575  -2.020    0.100
+theta[29] -0.586  0.733  -1.929    0.780
+theta[30]  0.322  0.447  -0.491    1.187
+
+Visual checks complement numeric diagnostics. Plot the first four parameters and make sure each chain explores the same support.
+
+```python
+import matplotlib.pyplot as plt
+
+az.plot_trace(
+    idata,
+    var_names=["theta"],
+    coords={"theta_dim": slice(0, 4)},
+    compact=True,
+    figsize=(10, 6),
+)
+plt.tight_layout()
+```
+
+![Trace plots for the first four parameters](/img/posts/jax-202/trace.png)
 
 Watch for:
 
@@ -249,6 +357,10 @@ probs = posterior_predictive_mean(theta_samples, test_features)
 pred_labels = (probs > 0.5).astype(jnp.int32)
 test_accuracy = jnp.mean(pred_labels == test_labels)
 print(f"Posterior predictive accuracy: {test_accuracy * 100:.1f}%")
+```
+
+```text
+Posterior predictive accuracy: 98.2%
 ```
 
 ## 8. Beyond basic kernels
