--- a/content/posts/mcmc/jax-203.md
+++ b/content/posts/mcmc/jax-203.md
@@ -9,7 +9,7 @@ categories = ["posts"]
 description = "Model a biased coin with Bamojax, drive BlackJax NUTS, and validate the posterior with predictive checks."
 +++
 
-Welcome to JAX 203! This lab follows the `content/pdf/jax_203.ipynb` notebook and shows how to express a Beta–Bernoulli coin model in Bamojax, run BlackJax's No-U-Turn Sampler (NUTS), and sanity-check the posterior with predictive simulations.
+Welcome to JAX 203! This lab follows the `content/ipynb/jax_203.ipynb` notebook and shows how to express a Beta–Bernoulli coin model in Bamojax, run BlackJax's No-U-Turn Sampler (NUTS), and sanity-check the posterior with predictive simulations.
 
 ## 0. Environment setup
 
